--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ aiosqlite==0.20.0      # Для SQLite
 redis==5.0.1
 python-dotenv==1.0.0
 apscheduler==3.10.4
+alembic==1.13.1        # Для миграций БД
